# Haze

./: README.md  pyproject.toml
installer/: haze.desktop  install.sh
src/haze/: __main__.py  i18n.py  main.py
src/haze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/haze/assets/: __init__.py
src/haze/crypto/: e2e.py
src/haze/network/: client.py  protocol.py  server.py  web_server.py
src/haze/secure/: memory.py
src/haze/storage/: settings.py  vault.py
src/haze/tor/: controller.py
src/haze/ui/: main_window.py  setup_dialog.py  styles.py  tray.py
